--- a/scTablet/res/layout/main_content.xml
+++ b/scTablet/res/layout/main_content.xml
@@ -7,8 +7,8 @@
         android:id="@+id/content_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Under Construction"
+        android:text="Click a menu button on the left"
         android:layout_margin="20dp"
-        android:textSize="28sp"
+        android:textSize="25sp"
         />
 </LinearLayout>
